# EarpodCameraFirmware

./: CMakeLists.txt
components/USB Communication/: audiodata_usb.cpp  videodata_usb.cpp
components/USB_Communication/: CMakeLists.txt  audiodata_usb.cpp  audiodata_usb.h  tusb_config.h  usb_descriptors.cpp  videodata_usb.cpp  videodata_usb.h
components/audio/: CMakeLists.txt  microphone.cpp  microphone.h  speaker.cpp  speaker.h
components/audioa/: CMakeLists.txt  microphone.cpp  microphone.h  speaker.cpp  speaker.h
components/camera/: CMakeLists.txt  camera.cpp  camera.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  tusb_config.h
